infra-gcp-ha-k8s-helm/nexus-iq-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-iq
  labels:
    name: nexus-iq
    app: nexus-iq-server-ha
